css/ukeGeeks.music.css
/*
	Document   : ukeGeeks.music
	Created on : May, 2010
	Author     : Buz
	Description:
			Classes used by UkeGeeks in a song layout.
*/

/* need to do a STRONG-ish reset (override WP theme)
*/
.ugs-song-wrap {
	font-size: 100%;
}
.ugs-song-wrap,
.ugs-song-wrap h5,
.ugs-song-wrap h6,
.ugs-song-wrap pre,
.ugs-song-wrap code,
.ugs-song-wrap strong,
.ugs-song-wrap em {
	font-family:inherit;
	font-weight:normal;
	font-size: inherit;
	font-style:normal;
	float: none;
	line-height:1;
	text-align:left;
	margin:0;
	padding:0;
	width:auto;
}
.ugs-song-wrap pre{
	background-color: transparent;
}
/*
,
.ugs-song-wrap canvas,
.ugs-song-wrap div
*/

/* old skool clearfix */
.ugs-grouped:after {
	content: ".";
	display: block;
	clear: both;
	visibility: hidden;
	line-height: 0;
	height: 0;
}
.ugs-grouped {
	display: block;
}
.ugs-grouped {
.display: inline-block;
}
.ie8 .ugs-grouped {
	display: block;
}
* html .ugs-grouped {
	height: 1%;
}
/* LAYOUT (2-COLUMNS)
  ------------------------------ */
.ugsLayoutTwoColumn .ugs-diagrams-wrap {
	float:left;
	width:225px;
}
.ugsLayoutTwoColumn .ugs-source-wrap {
	margin-left:250px;
}
/* CHORD CANVAS (BLOCKS)
  ------------------------------ */
.ugs-diagrams-wrap canvas {
	float:left;
	margin-right:5px;
}
.ugsIgnoredChords {
	clear: left;
	font-size: 0.9em;
	padding: 0 0 0.5em;
}
/*
  ------------------------------ */
.ugs-source-wrap h5,
.ugs-source-wrap h6 {
	border-left:solid .5em #CCC;
	color:#036;
	font-family:Georgia, "Times New Roman", Times, serif;
	font-size:1.2em;
	font-style:italic;
	line-height:1;
	margin:.4em 0 1em;
	padding:.2em 0;
	text-indent:2.3em;
}
.ugs-source-wrap h6 {
	font-size:.9em;
}
.ugs-source-wrap h5 + h6 {
	margin-top:-1em;
}
.ugs-source-wrap pre {
	color:#333;
	font-family:inherit;
	padding-top:0.4em;
	white-space:pre;
}
.ugs-source-wrap pre + h6 {
	margin-top: 2.5em;
}
.ie .ugs-source-wrap pre {
	font-family:Verdana, Arial, Helvetica, sans-serif;
}
/* CHORUS BLOCK
  ------------------------------ */
.ugs-song-wrap .ugsChorus {
	border-left:solid 3px #ddd;
	margin:1em 0 2.3em;
}
.ugsChorus pre {
	margin-left:1em;
}
.ie .ugsChorus h6,
.ugsChorus > h6 {
	font-size:1.2em;
	text-indent:.4em;
}
.ugs-song-wrap pre + .ugsChorus {
	margin-top:3.5em;
}
/* TABS
  ------------------------------ */
.ugs-song-wrap .ugsTabs {
	margin:0;
	padding:0;
}
.ugs-song-wrap .ugsTabs + .ugsPlain {
	margin:0 0 1em;
	padding:0;
}
.ugsTabs canvas{
	max-width: 100%;
}
/* PLACE CHORDS ABOVE TEXT
  ------------------------------ */
.ugs-song-wrap .ugsChords {
	line-height:3;
}
.ugsChords code {
	color:#efefef;
	display:inline-block; /* WebKit bug */
	/* height:1.2em; /* WebKit bug */
	font-family:Verdana, Arial, Helvetica, sans-serif;
	/* font-size:1.2em; */
	font-weight:normal;
	position:relative;
	vertical-align: middle;/* now fix the fix for Firefox */
}
.ugsInline .ugsChords code {
	color:#f2f2f2;
	display: inline;
	vertical-align: inherit;
}
.ugsChords code strong {
	left:-4px;
	position:absolute;
	top:-2em;
}
.ugsChords code em {
	color:#d20;
	margin:0 -3px;
}
.ie .ugsChords {
	line-height:2.6;
}
.ie code strong,
.ie code em {
	font-weight:normal;
	font-style:normal;
}
/* SHOW CHORD NAMES INLINE
  ------------------------------ */
.ugs-song-wrap .ugsInline,
.ugs-song-wrap .ugsInline pre,
.ugs-song-wrap.ugsInline pre /* added for Editor Plus -- required? */
{
	line-height:1.8;
}
.ugsInline code {
	padding-left:.1em;
}
.ugsInline code strong {
	position:relative;
	top:auto;
	left:auto;
}
/* PLAIN (lyrics only) Blocks
  ------------------------------ */
.ugsPlain + h6 {
	margin-top:1.5em;
}
/* CHORD-ONLY (NO LYRICS) BLOCKS
  ------------------------------ */
.ugs-song-wrap .ugsNoLyrics {
	line-height:2;
	padding:0 0 1.2em;
}
.ugsNoLyrics + h6 {
	margin-top:.5em;
}
.ugsNoLyrics code {
	height:auto;
	vertical-align: baseline;
}
.ugsNoLyrics code strong {
	position:relative;
	top:auto;
	left:auto;
}
/* CHORD-ONLY (NO LYRICS) BLOCKS
  ------------------------------ */
.ugsNoChords aside {
	display: none;
}
.ugsNoChords article {
	margin-left: 0;
}
/* SHOW CHORD DIAGRAMS INLINE
  See also JS class: ukeGeeks.settings.inlineFretBox
  ------------------------------ */
.ugsInlineDiagrams .ugsChords {
	line-height:95px;
}
.ugsInlineDiagrams .ugsNoLyrics code {
	vertical-align: text-top;
}
.ugsInlineDiagrams .ugsNoLyrics strong {
	position: absolute;
}
.ugsInlineDiagrams .ugsChords + .ugsPlain {
	padding-bottom: 40px;
}
.ugsInlineDiagrams h6 + .ugsChords {
	padding-top: 20px;
}
.ugsInlineDiagrams code {
	font-size:.8em;
	font-weight:normal;
}
.ugsInlineDiagrams .ugsChords code strong {
	left:0;
	line-height:1;
	text-align:center;
	top:-72px;
	width: 40px;
}
.ugsChords code canvas {
	left:0;
	position:absolute;
	top:-60px;
}
/* TODO: problem with packing */
.ugs-song-wrap .ugsInlineSpacer {
	display:inline-block;
	line-height:1px;
	width:40px;
}
/* Multi-Column Layouts
  ------------------------------ */
.ugsWrap .ugsColumn {
	float:left;
}
.ugsColumnCount2 .ugsColumn {
	width: 49.5%;
}
.ugsColumnCount3 .ugsColumn {
	width: 32.5%;
}
.ugsColumnCount4 .ugsColumn {
	width: 24.5%;
}
/* Pagebreaks
  ------------------------------ */
.ugsNewPage{
	border-width: 0;
	border-top:solid 1px #f2f2f2;
	margin: 0;
	page-break-before:always;
}

.chordsAlwaysOnTop {
    position: fixed;
    top: 50px;
    z-index: 5;
    background-color: white;
    border-radius: 10px;
    box-shadow: inset 0 0 25px #c3c3c0;
}

#songSourceDlg {
  z-index: 6;
}

